# todd

./: .gitignore  README.md  go.mod  go.sum  main.go  pyproject.toml
src/todd/: main.py  provider.py
src/todd/providers/: anthropic.py  openai_compat.py
src/todd/tools/: bash.py
tests/: test_agent.py  test_providers.py  test_tools.py
