[project]
name = "todd"
version = "0.1.0"
description = "A small coding agent."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

[project.scripts]
todd = "todd.main:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
